# HHS-SWADP

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
design/: Class-Diagram.drawio  Sequentie-Diagram.drawio  class-diagram.drawio  ontwerpparameters.ods  tmp.drawio  tmp2.drawio
inc/: AnalogMeter.cpp  AnalogMeter.h  App.cpp  App.h  CMakeLists.txt  Car.cpp  Car.h  ConsoleApp.cpp  ConsoleApp.h  CustomMachine.cpp  CustomMachine.h  DigitalMeter.cpp  DigitalMeter.h  Location.cpp  Location.h  Machine.h  Mone.h  Motor.h  Mtwo.h  Observer.cpp  Observer.h  Position.cpp  Position.h  Positionable.cpp  Positionable.h  Robot.cpp  Robot.h  Speed.cpp  Speed.h  StepperMotor.cpp  StepperMotor.h  Subject.cpp  Subject.h  TSensor.h  TemperatuurDisplay.cpp  TemperatuurDisplay.h  Thermocouple.cpp  Thermocouple.h
lib/: CMakeLists.txt
